site-flask-mustache/www/css/error.css
:root {
  --svg-dark-bg-colour: #4F1784;
  --svg-dark-shadow-colour: #000000;
  --svg-light-bg-colour: #E1EFF8;
  --svg-light-shadow-colour: #000000;
}

div#id_404_svg_container {
  width: 80vw;
}

div#id_404_svg_container svg {
  width: 100%;
  height: 100%;
}

body.lightondark div#id_404_svg_container svg #id_rect_bg {
  fill: var(--svg-dark-bg-colour);
}

body.darkonlight div#id_404_svg_container svg #id_rect_bg {
  fill: var(--svg-light-bg-colour);
}

